--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "viva-mexico",
-
   "version": "0.0.0",
   "author": "momentiris <momentiris@gmail.com> (https://github.com/momentiris)",
   "scripts": {
@@ -22,6 +21,7 @@
     "@babel/preset-react": "^7.16.0",
     "@iteam/eslint-config-react": "^0.3.1",
     "@vitejs/plugin-react": "^1.0.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -30,7 +30,9 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^5.0.0",
+    "postcss": "^8.4.5",
     "prettier": "^2.4.1",
+    "tailwindcss": "^3.0.2",
     "vite": "^2.6.4"
   }
 }
