--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/plugin-syntax-jsx": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
     "@iteam/eslint-config-react": "^0.3.1",
+    "@nabla/vite-plugin-eslint": "^1.3.5",
     "@vitejs/plugin-react": "^1.0.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^7.32.0",
