--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,15 @@
 {
   "extends": ["@iteam/eslint-config-react"],
+  "rules": {
+    "react/prop-types": "off"
+  },
 
   "settings": {
     "import/resolver": {
       "alias": {
-        "map": [
-          ["@", "./src"]
-        ],
-        "extensions": [".js",".jsx"]
+        "map": [["@", "./src"]],
+        "extensions": [".js", ".jsx"]
       }
     }
-  },
-  
+  }
 }
-
