--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "@react-three/drei": "^7.26.1",
+    "@react-three/fiber": "^7.0.24",
     "history": "^5.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^6.0.2",
-    "react-three-fiber": "^6.0.13"
+    "react-router-dom": "^6.0.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.0",
