--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@react-spring/three": "^9.4.2",
+    "@react-spring/web": "^9.4.2",
     "@react-three/drei": "^7.26.1",
     "@react-three/fiber": "^7.0.24",
+    "framer-motion": "^5.6.0",
     "history": "^5.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
