--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 {
-  "extends": ["@iteam/eslint-config-react"],
+  "extends": ["@iteam/eslint-config-react/typescript"],
   "rules": {
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/ban-ts-comment": "off"
   }
 }
