--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "momentiris <momentiris@gmail.com> (https://github.com/momentiris)",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "serve": "vite preview"
   },
   "dependencies": {
@@ -12,6 +12,7 @@
     "@react-spring/web": "^9.4.2",
     "@react-three/drei": "^7.26.1",
     "@react-three/fiber": "^7.0.24",
+    "@types/react-router-dom": "^5.3.2",
     "framer-motion": "^5.6.0",
     "history": "^5.1.0",
     "react": "^17.0.0",
@@ -24,6 +25,8 @@
     "@babel/preset-react": "^7.16.0",
     "@iteam/eslint-config-react": "^0.3.1",
     "@nabla/vite-plugin-eslint": "^1.3.5",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "@vitejs/plugin-react": "^1.0.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^7.32.0",
@@ -37,6 +40,7 @@
     "postcss": "^8.4.5",
     "prettier": "^2.4.1",
     "tailwindcss": "^3.0.2",
+    "typescript": "^4.5.4",
     "vite": "^2.6.4"
   }
 }
