--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "@react-spring/web": "^9.4.2",
     "@react-three/drei": "^7.26.1",
     "@react-three/fiber": "^7.0.24",
-    "@types/react-router-dom": "^5.3.2",
-    "framer-motion": "^5.6.0",
     "history": "^5.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -27,6 +25,8 @@
     "@nabla/vite-plugin-eslint": "^1.3.5",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/three": "^0.136.1",
     "@vitejs/plugin-react": "^1.0.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^7.32.0",
@@ -37,6 +37,7 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^5.0.0",
+    "gltfjsx": "^4.5.2",
     "postcss": "^8.4.5",
     "prettier": "^2.4.1",
     "tailwindcss": "^3.0.2",
