--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "history": "^5.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^6.0.2"
+    "react-router-dom": "^6.0.2",
+    "react-spring": "^9.4.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.0",
