--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-spring/web": "^9.4.2",
     "@react-three/drei": "^7.26.1",
     "@react-three/fiber": "^7.0.24",
+    "framer-motion": "^6.2.1",
+    "framer-motion-3d": "^6.2.1",
     "history": "^5.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
