--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "history": "^5.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.2",
     "react-spring": "^9.4.2"
   },
