--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,19 @@
 {
-  "extends": ["@iteam/eslint-config-react/typescript"],
+  "extends": ["@iteam/eslint-config-react/typescript", "plugin:import/recommended"],
   "rules": {
     "react/prop-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/ban-ts-comment": "off"
+    "@typescript-eslint/ban-ts-comment": "off",
+    "import/order": [
+      "error",
+      {
+        "newlines-between": "always",
+        "groups": [
+          ["external", "builtin"],
+          "internal",
+          ["index", "sibling", "parent"],
+        ],
+      },
+    ],
   }
 }
