--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@react-spring/three": "^9.4.2",
-    "@react-spring/web": "^9.4.2",
     "@react-three/drei": "^7.26.1",
     "@react-three/fiber": "^7.0.24",
     "framer-motion": "^6.2.1",
@@ -18,8 +16,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^6.0.2",
-    "react-spring": "^9.4.2"
+    "react-router-dom": "^6.0.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.0",
