--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-testing-library": "^5.0.0",
     "gltfjsx": "^4.5.2",
     "postcss": "^8.4.5",
+    "postcss-100vh-fix": "^1.0.2",
     "prettier": "^2.4.1",
     "tailwindcss": "^3.0.2",
     "typescript": "^4.5.4",
